<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="default_notification_channel_id">Request Channel</string>
    <string name="default_notification_channel_id_accept">Accept Channel</string>
    <string name="default_notification_channel_id_message">Message Channel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_email_or_username">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_text">Forgot your login details? Get help signing in.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_2">Log in.</string>
    <string name="go_back_title">You\'re Almost Done</string>
    <string name="go_back_body">Are you sure you want to go back?</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">Go Back</string>
    <string name="loading">Loading…</string>
    <string name="log_out_body">Log out of Instagram?</string>
    <string name="log_out">Log Out</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="pick_username_for_your_account_you_can_always_change_it_later">Pick username for your account. You can always change it later.</string>
    <string name="username">Username</string>
    <string name="begin">Begin</string>
    <string name="welcome_to_instagram">WELCOME TO INSTAGRAM,</string>
    <string name="find_people_to_follow_and_start_sharing_photos_you_can_change_your_username_anytime">Find people to follow and start sharing photos. You can change your username anytime.</string>
    <string name="change_username_small">Change Username</string>
    <string name="sms_confirmation_sent">SMS confirmation sent.</string>
    <string name="enter_confirmation_code">ENTER CONFIRMATION CODE</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="that_code_isn_t_valid_you_can_request_a_new_one">That code isn\'t valid. You can request a new one.</string>
    <string name="next">Next</string>
    <string name="user_name">user_name</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="biography">Biography</string>
    <string name="change_photo">Change Photo</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="posts_you_ve_liked">Posts You\'ve Liked</string>
    <string name="saved">Saved</string>
    <string name="private_account">Private Account</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="phone_small">Phone</string>
    <string name="looks_like_your_phone_number_may_be_incorrect_please_try_entering_your_full_number_including_the_country_code">Looks like your phone number may be incorrect. Please try entering your full number, including the country code.</string>
    <string name="you_may_receive_sms_updates_from_instagram_and_can_opt_out_at_any_time">You may receive SMS updates from Instagram and can opt out at any time.</string>
    <string name="email_small">Email</string>
    <string name="please_enter_a_vail_email">Please enter a vail email.</string>
    <string name="name_and_password">NAME AND PASSWORD</string>
    <string name="full_name">Full name</string>
    <string name="this_is_a_common_password_try_something_that_s_harder_to_guess">This is a common password. Try something that\'s harder to guess.</string>
    <string name="your_contacts_are_periodically_synced_and_stored_on_our_servers_to_remove_contacts_go_to_settings_and_disconnect">Your contacts are periodically synced and stored on our servers. To remove contacts, go to Settings and disconnect.</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="yes">Yes</string>
    <string name="unsaved_title">You have unsaved changes. Are you sure you want to cancel?</string>
    <string name="no">No</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="video">VIDEO</string>
    <string name="photo_small">Photo</string>
    <string name="video_small">Video</string>
    <string name="share_to">Share To</string>
    <string name="share">Share</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="permission_need">Permission need?</string>
    <string name="permission_body">You need to provide the necessary permissions to reach this section, please go to the settings and give the necessary permissions.</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="reply">Reply</string>
    <string name="likes">Likes</string>
    <string name="profile">Profile</string>
    <string name="when_you_share_photos_and_videos_they_ll_appear_on_your_profile">When you share photos and videos, they\'ll appear on your profile.</string>
    <string name="share_your_first_photo_or_video">Share your first photo or video</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="no_posts_yet">No Posts Yet</string>
    <string name="message">Message</string>
    <string name="requested">Requested</string>
    <string name="follow_back">Follow Back</string>
    <string name="unfollow">Unfollow</string>
    <string name="message_extra">Message…</string>
    <string name="send">Send</string>
    <string name="camera">Camera</string>
    <string name="typing">Typing…</string>
    <string name="dialog_private_title">Change to Private Account?</string>
    <string name="change_to_public_account">Change to Public Account?</string>
    <string name="dialog_private_body">When your account is private, only people you approve can see your photos, videos and stories on Instagram. Your existing followers won\'t be affected.</string>
    <string name="ok">OK</string>
    <string name="dialog_public_body">Anyone will be able to see your photos, videos and stories. You will no longer need to approve followers.</string>
    <string name="this_account_is_private">This Account is Private</string>
    <string name="follow_this_account_to_see_their_photos_and_videos">Follow this account to see their photos and videos.</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="recent">Recent</string>
    <string name="instagram_direct">Instagram Direct</string>
    <string name="send_private_photos_videos_and_messages_to_a_friend_or_group">Send private photos, videos and messages to a friend or group</string>
    <string name="send_message">Send Message</string>
    <string name="mute_messages">Mute Messages</string>
    <string name="you">You</string>
    <string name="follow_requests">Follow Requests</string>
    <string name="approve_or_ignore_requests">Approve or ignore requests</string>
    <string name="follow_interactions">Follow interactions</string>
    <string name="interactions">Interactions</string>
    <string name="following_extra">Following</string>
    <string name="activity_from_people_you_follow">Activity From People You Follow</string>
    <string name="when_someone_you_follow_likes_or_comments_on_someone_else_s_post_you_ii_se_it_here">When someone you follow likes or comments on someone else\'s post, you\'II se it here.</string>
    <string name="followers_extra">Followers</string>
    <string name="videos_you_might_like">Videos You Might Like</string>
    <string name="watch">Watch</string>
    <string name="look">Look</string>
    <string name="photos_you_might_like">Photos You Might Like</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password, again</string>
    <string name="error">Error</string>
    <string name="dialog_error_body">This password is too easy to guess. Please create a new one. Your old password was entered incorrectly. Please enter it again.</string>
    <string name="dismiss">Dismiss</string>
</resources>
