<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/instagram_title"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/log_input_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_edit_default_style"
            android:hint="@string/phone_number_email_or_username"
            android:paddingBottom="14dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="14dp"
            android:textSize="14sp"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/log_input_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_edit_default_style"
            android:hint="@string/password"
            android:paddingBottom="14dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="14dp"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_login_button_style"
                android:elevation="0dp"
                android:enabled="false"
                android:foreground="@android:color/transparent"
                android:text="@string/log_in"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/selector_login_btn_text_color" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/log_forgot_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_text"
            android:textSize="12sp"
            android:padding="20dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>