<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.ProfileSettingsFragment"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorInstagramGray"
        android:elevation="1dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/settings_back_button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back_icon"
                android:padding="18dp"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/settings"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settings_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_settings"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>

            <TextView
                android:id="@+id/profile_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/posts_liked_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posts_you_ve_liked"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/saved_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/private_account_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_account"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/private_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/clear_search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_search_history"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/log_out_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>