<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.ChangeUsernameFragment"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_username"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_username_for_your_account_you_can_always_change_it_later"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="13sp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:background="@drawable/custom_edit_default_style"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:textSize="14sp"
            android:layout_marginTop="25dp"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_done_green_icon" />

        <TextView
            android:id="@+id/username_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>

        <Button
            android:id="@+id/username_next_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_login_button_style"
            android:elevation="0dp"
            android:enabled="true"
            android:layout_marginTop="20dp"
            android:foreground="@android:color/transparent"
            android:text="@string/begin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/selector_login_btn_text_color" />
    </LinearLayout>

</RelativeLayout>