<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.FinishRegisterFragment"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_instagram"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_people_to_follow_and_start_sharing_photos_you_can_change_your_username_anytime"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/reg_finish_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_login_button_style"
                android:elevation="0dp"
                android:foreground="@android:color/transparent"
                android:text="@string/begin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/selector_login_btn_text_color" />

            <ProgressBar
                android:id="@+id/finish_progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/change_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/change_username_small"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="13sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/policy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:padding="18dp"
        android:textSize="12sp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"/>

</RelativeLayout>